--- a/index.html
+++ b/index.html
@@ -246,8 +246,31 @@
                     </div>
                 </div>
             </div>
-
         </section>
     </main>
+    <!-- Footer -->
+    <footer class="footer-f">
+        <div class="footer-area">
+            <div class="footer-heading">
+                <h1>Goal</h1>
+            </div>
+            <hr>
+            <div class="contact-area" >
+                <ul class="contact-us">
+                    <li>Contact Us</li>
+                    <li>Terms of Service</li>
+                    <li>Privacy Policy</li>
+                    <li>Privacy Settings</li>
+                    <li>Goal App</li>
+                    <li>Goal Live</li>
+                </ul>
+            </div>
+            <div class="icons">
+                <i class="fa fa-brands fa-facebook-square"></i>
+                <i class="fa fa-brands fa-instagram"></i>
+                <i class="fa fa-brands fa-twitter-square"></i>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
